--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@laylazi/bootstrap-rtl": "^4.5.3-1",
     "bootstrap": "^4.5.3",
     "css-loader": "^5.0.0",
+    "expose-loader": "^3.1.0",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
@@ -23,5 +25,6 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^3.11.0"
+
   }
 }
