--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "jquery": "^3.6.0",
+    "jquery-ui-touch-punch": "^0.2.3",
     "mini-css-extract-plugin": "^2.4.5",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "popper.js": "^1.16.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^3.11.0"
-
+    "webpack-dev-server": "^3.11.0",
+    "webpack-jquery-ui": "^2.0.1"
   }
 }
